-make navbar fixed and allow image expansion overflow to spill out

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,10 @@ html, body {
 }
 #intro {
 	background-color: lightgreen;
-	padding: 0.1em;
+	overflow: visible;
+	position: fixed;
+	height: 34%;
+	width: 100%;
 }
 
 #profile-pic {
@@ -36,8 +39,9 @@ html, body {
 	display: inline-block;
 	text-align: center;
 	margin: 0em;
+	vertical-align: top;
 	position: relative;
-	bottom: 1em;
+	bottom: -0.9em;
 }
 
 #topnav {
